<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.hralign.navigation.LoginActivity">


<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView"
    android:src="@drawable/logo1"
    android:layout_gravity="left"
    android:paddingBottom="50dp"
    android:paddingLeft="20dp"
    android:paddingTop="50dp"
    android:adjustViewBounds="false" />

<EditText
    android:id="@+id/loginEmail"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username"
    android:drawableLeft="@drawable/businessman"
    android:background="@drawable/edittext"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:textSize="15dp"
    android:layout_marginBottom="10dp"/>

<EditText
    android:id="@+id/loginPassword"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:drawableLeft="@drawable/security"
    android:background="@drawable/edittext"
    android:paddingTop="10dp"
    android:paddingLeft="15dp"
    android:paddingBottom="10dp"
    android:textSize="15dp"
    android:layout_marginBottom="10dp"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="341dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/language1"
        android:layout_gravity="left"
        android:paddingRight="20dp"
        android:id="@+id/txtTotalAmt"
        android:textSize="15dp"
        >
    </TextView>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:entries="@array/languages"
        android:gravity="center"
        android:paddingTop="25sp"/>

</LinearLayout>


<TextView
    android:id="@+id/login_error"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center" />

<Button
    android:id="@+id/btnLogin"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:drawableLeft="@drawable/login"
    android:onClick="NavigateToMainScreen"
    android:text="@string/login"
    android:textColor="#fff"
    android:background="@drawable/button"
    android:textAlignment="center"
    android:allowUndo="false"
    android:layout_margin="10dp"
    android:paddingLeft="15dp"
    android:textStyle="bold"
    android:textSize="20dp"
    android:layout_weight="0.05" />

</LinearLayout>